test/JDBC/expected/BABEL_539-vu-verify.out
EXEC babel_539_prepare_proc
GO

SELECT col1 INTO babel_539NewTable1 FROM babel_539OldTable;
GO

Select col1 FROM babel_539NewTable1; 
GO
~~START~~
int
10
20
~~END~~


DROP TABLE IF EXISTS babel_539NewTable1;
GO

SELECT col1, IDENTITY(int, 1,1) AS id_num INTO babel_539NewTable1 FROM babel_539OldTable;
GO

Select col1, id_num FROM babel_539NewTable1 order by id_num;
GO
~~START~~
int#!#int
10#!#1
20#!#2
~~END~~


DROP TABLE IF EXISTS babel_539NewTable1;
GO

SELECT col1, IDENTITY(int, 1) AS id_num INTO #babel_539NewTable1 FROM babel_539OldTable;
GO

Select col1, id_num FROM #babel_539NewTable1 order by id_num;
GO
~~START~~
int#!#int
10#!#1
20#!#2
~~END~~


DROP TABLE IF EXISTS #babel_539NewTable1;
GO

SELECT col1, IDENTITY(int) AS id_num INTO #babel_539NewTable1 FROM babel_539OldTable;
GO

Select col1, id_num FROM #babel_539NewTable1 order by id_num;
GO
~~START~~
int#!#int
10#!#1
20#!#2
~~END~~


DROP TABLE IF EXISTS #babel_539NewTable1;
GO

SELECT col1, id_num=IDENTITY(int, 1,1) INTO babel_539NewTable1 FROM babel_539OldTable;
GO

Select col1, id_num FROM #babel_539NewTable1 order by id_num; 
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: relation "#babel_539newtable1" does not exist)~~


DROP TABLE IF EXISTS #babel_539NewTable1;
GO

SELECT col1, [id_num]=IDENTITY(int, 1,1) INTO #babel_539NewTable1 FROM babel_539OldTable;
GO

Select col1, id_num FROM #babel_539NewTable1 order by id_num; 
GO
~~START~~
int#!#int
10#!#1
20#!#2
~~END~~


DROP TABLE IF EXISTS #babel_539NewTable1;
GO

SELECT col1, IDENTITY(int, 1,1) AS [id_num] INTO #babel_539NewTempTable1 FROM babel_539OldTable;
GO

Select col1, id_num FROM #babel_539NewTempTable1 order by id_num; 
GO
~~START~~
int#!#int
10#!#1
20#!#2
~~END~~


DROP TABLE IF EXISTS #babel_539NewTempTable1;
GO

SELECT *, IDENTITY(int) AS [id_num] INTO #babel_539NewTempTable1 FROM babel_539OldTable;
GO

Select col1, name, id_num FROM #babel_539NewTempTable1 order by id_num; 
GO
~~START~~
int#!#varchar#!#int
10#!#user1#!#1
20#!#user2#!#2
~~END~~


DROP TABLE IF EXISTS #babel_539NewTempTable1;
GO

SELECT col1, IDENTITY(char, 1,1) AS id_num INTO babel_539NewTable1 FROM babel_539OldTable;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: identity column type must be smallint, integer, bigint, or numeric)~~


DROP TABLE IF EXISTS babel_539NewTable1;
GO

SELECT col1, IDENTITY() AS id_num INTO babel_539NewTable1 FROM babel_539OldTable;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near ")")~~


-- impact to other similar queries and functions
-- normal create table cases
CREATE TABLE babel_539OldTable2 (col1 int NOT NULL, id_num INT IDENTITY(1, 2));
GO

INSERT INTO babel_539OldTable2 VALUES (10), (20), (30), (40);
GO
~~ROW COUNT: 4~~


SELECT col1, id_num INTO babel_539NewTable2 FROM babel_539OldTable2 order by id_num;
GO

DROP TABLE IF EXISTS babel_539OldTable2;
GO

DROP TABLE IF EXISTS babel_539NewTable2;
GO

-- create table as temp table
CREATE TABLE #babel_539NewTempTable2 (col1 int, id_num int IDENTITY(-1, 2));
GO

INSERT INTO #babel_539NewTempTable2(col1) values (10),(20),(30);
GO
~~ROW COUNT: 3~~


Select col1, id_num FROM #babel_539NewTempTable2 order by id_num; 
GO
~~START~~
int#!#int
10#!#-1
20#!#1
30#!#3
~~END~~


DROP TABLE IF EXISTS #babel_539NewTempTable2;
GO

CREATE TABLE #babel_539NewTempTable2 (col1 int);
GO

Select col1 FROM #babel_539NewTempTable2 order by col1; 
GO
~~START~~
int
~~END~~



ALTER TABLE #babel_539NewTempTable2 ADD id_num int IDENTITY(-1, 2);
-- try altering table and check other columns, sequence should drop and any constraints also
Select col1, id_num FROM #babel_539NewTempTable2 order by id_num; 
GO
~~START~~
int#!#int
~~END~~


DROP TABLE IF EXISTS #babel_539NewTempTable2;
GO

-- Two identity columns in a query
SELECT col1, IDENTITY(int, 1,1) as id_num, IDENTITY(int, 1,1) as id_num2 INTO #babel_539NewTempTable2 FROM babel_539OldTable;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Attempting to add multiple identity columns to table "#babel_539newtemptable2" using the SELECT INTO statement.)~~


--calling internal function directly
SELECT col1, IDENTITY_INTO(1, 1,1) as id_num INTO #babel_539NewTempTable2 FROM babel_539OldTable;
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: function IDENTITY_INTO does not exist)~~


SELECT sys.IDENTITY(23, 1);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Incorrect syntax near ')')~~


SELECT IDENTITY(int, 21);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Incorrect syntax near ')')~~


SELECT sys.IDENTITY_INTO(23, 1, 1);
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: function IDENTITY_INTO does not exist)~~

